--- a/static/style.css
+++ b/static/style.css
@@ -48,8 +48,308 @@ table {
 }
 
 /** common **/
+html{
+    font-size: 62.5%;
+    box-sizing: border-box;
 
+}
+body{
+    font-family: Open Sans,sans-serif;
+}
 input,label{
     font-family: inherit;
     font-size: inherit;
 }
+
+a{
+    text-decoration: none;
+}
+.container{
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+}
+.btn{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    min-width:113px ;
+    min-height: 52px;
+    font-family: Open Sans;
+    font-weight: 600;
+    font-size: 1.6rem;
+    letter-spacing: 0%;
+    text-align: center;
+    background: orange;
+    border-radius: 6px;
+    background: #212832;
+    color: #fff;
+}
+
+.title{
+    font-family: Open Sans;
+    font-weight: 700;
+    font-size: 4rem;
+    line-height: 5rem;
+    letter-spacing: 0%;
+    text-align: center;
+    color: #212832;
+
+}
+.desc{
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 1.8rem;
+    line-height: 3rem;
+    letter-spacing: 0%;
+    color: #696D76;
+
+}
+:root{
+    --primary-color:#7264D6;
+    --second-color:#439F90;
+    --color-gray:#696D76;
+    --border-img:12px;
+    --border-input:6px;
+    
+}
+
+/** header **/
+.header{
+    padding: 12px;
+}
+
+.header-inner{
+    display: flex;
+    align-items: center;
+    height: 54px;
+}
+.navigation{
+    margin-left: 70px;
+    
+}
+.navigation-item{
+    padding: 12px ;
+    padding-left: 35px;
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    letter-spacing: 0%;
+    text-align: center;
+    color: #696D76;
+}
+.navigation-item:first-child{
+    position: relative;
+    font-weight: 600;
+    color: #212832;
+}
+.navigation-item:first-child::after{
+    position: absolute;
+    left: 35px;
+    bottom: 12px;
+    content: "";
+    width: calc(100% - calc(calc(12px ) + 35px) );
+    height: 1px;
+    background: #7264D6;
+    border-radius: 999px;
+}
+.navigation-item:hover{
+    font-weight: 600;
+    color: #212832;
+}
+.header-wrap{
+    margin-left: auto;
+}
+.btn-decoration{
+    background: #fff;
+    color: #212832;
+}
+/** hero **/ 
+.hero{
+    height: calc(100% - 78px);
+    padding: 76px;
+}
+.hero-inner{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.hero__content{
+    width: 100%;
+
+}
+.hero__title{
+    position: relative;
+    width: 500px;
+    margin-bottom: 20px;
+    text-align: left;
+    font-family: Open Sans;
+    font-weight: 700;
+    font-size: 6rem;
+    line-height: 7rem;
+    letter-spacing: 0%;
+
+}
+
+
+.title-transition {
+    display: inline-block;
+    position: relative;
+}
+
+.title-transition::before {
+    content: "Payment";
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    justify-content: flex-end;
+
+    padding-bottom: 4px;
+
+    width: 0;
+    color: #7264d6;
+    transition: width 0.5s ease-in-out; 
+    overflow: hidden;
+    
+}
+
+.title-transition:hover::before {
+    justify-content: flex-start;
+    left: 0;
+    width: 100%; 
+}
+.hero__desc{
+    width: 540px;
+    margin-bottom: 40px;
+}
+.form-submit{
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 540px;
+    height: 74px;
+    box-shadow: 0px 16px 42px 0px #00000012;
+    border-radius: 8px;
+    margin-bottom: 20px;
+}
+.form-email{
+    padding: 0 30px;
+    font-size: 3rem;
+    outline: none;
+    border: none;
+    width: 100%;
+    height: 100%;
+    flex-shrink: 1;
+    color: var(--color-gray);
+    border-radius: inherit;
+}
+.form-btn{
+    margin: 8px;
+    width: 149px;
+    height: calc(100% - 20px);
+    background: var(--primary-color);
+    border: none;
+    cursor: pointer;
+}
+.desc-child{
+    font-family: Open Sans;
+    font-weight: 600;
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+    letter-spacing: 0%;
+
+}
+.hero__media{
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.media-wrap{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 296px;
+    height: 562px;
+    border: 2px solid #000;
+    border-radius: 40px;
+    outline: 12px  solid #000;
+}
+.media-wrap::before{
+    position: absolute;
+    top: -12px;
+    left: 50%;
+    content: "";
+    width: 144px;
+    height: 46px;
+    background: #3C2F60;
+    border-radius: 0 0 18px 18px;
+    transform: translateX(-50%);
+}
+.media__card{
+    margin-top:53px ;
+    width: 250px;
+    height: 150px;
+    object-fit: cover;
+}
+.card-underline{
+    position: absolute;
+    top: 40%;
+    width: 250px;
+    height: 22px;
+}
+.card-list{
+    position: absolute;
+    top: 45%;
+    left: 0;
+}
+.card-item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+}
+.item-wrap{
+    width: 200px;
+}
+.card-item .item-wrap-1,
+.card-item .item-wrap-2{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    white-space: nowrap;
+    margin-bottom: 6px;
+}
+.card-item .item-wrap-2{
+    color: var(--color-gray);
+}
+.card-item .item-wrap-1 p{
+    font-family: Open Sans;
+    font-weight: 600;
+    font-size: 1.4rem;
+    letter-spacing: 0%;
+    vertical-align: middle;
+    color: #000;
+}
+.media-img-child-1{
+    position: absolute;
+    top: 80px;
+    left: -20px;
+}
+.media-img-child-2{
+    position: absolute;
+    top: 100px;
+    right: 200px;
+}
+
+.media-img-child-3{
+    position: absolute;
+    bottom: 50px;
+    right: 100px;
+}
+
