--- a/static/style.css
+++ b/static/style.css
@@ -85,6 +85,9 @@ a{
     background: #212832;
     color: #fff;
 }
+.btn:hover{
+    opacity: 0.8;
+}
 
 .title{
     font-family: Open Sans;
@@ -344,7 +347,7 @@ a{
 .media-img-child-2{
     position: absolute;
     top: 100px;
-    right: 200px;
+    right: -20px;
 }
 
 .media-img-child-3{
@@ -352,4 +355,168 @@ a{
     bottom: 50px;
     right: 100px;
 }
+/** about **/
+.about{
+    padding: 80px 0;
+}
+.about-inner{
+    display: flex;
+    align-items: center;    
+    justify-content: space-between;
+}
+.about__media{
+    width: 570px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.about__media-wrap{
+    position: relative;
+    width: 470px;
+    height: 619px;
+}
+.about__media-wrap::before{
+    position: absolute;
+    bottom: -73px;
+    content: url(./img/about-background.svg);
+    display: inline-block;
+    width: calc(100%);
+    height: 100%;
+    z-index: 1;
+}
+.about__img{
+    object-fit: cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+.about__img-1{
+    position: absolute;
+    top: 76px;
+    right: 62px;
+    z-index: 3;
+}
+.about__img-2{
+    position: absolute;
+    right: -100px;
+    bottom: 89px;
+    z-index: 3;
+}
+.about__content{}
+.about__title{
+    position: relative;
+    text-align: start;
+    padding-bottom: 70px;
+}
+.about__title::before{
+    content: url(./img/dash.svg) " Digital Smart Wallet";
+    display: inline-flex;
+    align-items: center;
+    position: absolute;
+    top: -20px;
+    left: 3px;
+    color: var(--color-gray);
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    letter-spacing: 0%;
+}
+.about__content{
+    width: 470px;
+}
+.content-wrap{
+    display: inline-block;
+    padding-bottom:30px ;
+}
+.content__title{
+    display: block;
+    font-family: Open Sans;
+    font-weight: 600;
+    font-size: 2.2rem;
+    color: #212832;
+    margin-bottom: 16px;
+    line-height: 2.5rem;
+}
+.content_desc{
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 1.6rem;
+}
 
+.about-inner-2{
+    flex-direction: row-reverse;
+}
+.about__list{
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    padding-bottom: 38px;
+}
+.about-item{
+    position: relative;
+    display: inline-block;
+    padding: 0 20px;
+    font-family: Open Sans;
+    font-weight: 600;
+    font-size: 1.8rem;
+    color: #212832;
+}
+.about-item::before{
+    position: absolute;
+    left: 0;
+    content: "";
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    background: var(--primary-color);
+    border-radius: 50%;
+}
+.about-btn{
+    width: 148px;
+    height: 58px;
+}
+.about__img-edit{
+    width: 482px;
+    height: 322px;
+}
+.about__media-wrap-edit{
+    display: flex;
+    align-items: center;
+}
+.about__media-wrap-edit::before{
+    display: none;
+
+}
+.about__img-1-edit{
+    right: -136px;
+
+}
+.about__img-2-edit
+{
+
+}
+.about__media-edit{
+    justify-content: center;
+}
+.about__media-wrap-last{
+    display: flex;
+    justify-content: center;
+}
+.about__media-wrap-last::before{
+    content: url(./img/about-background-last.svg);
+    height: auto;
+    bottom: 0;
+}
+.about__img-edit-2{
+    bottom: 0;
+    right: 30px;
+}
+.about__img-2-eddit{
+    bottom: -30px;
+}
+.about__img-1-edit{
+    top: 290px;
+    z-index: 4;
+}
