--- a/static/style.css
+++ b/static/style.css
@@ -527,3 +527,454 @@ a{
     top: 290px;
     z-index: 4;
 }
+
+/* feedback */
+.feedback{
+    padding: 90px 0;
+}
+.feedback__title{
+    position: relative;
+    padding: 12px;
+}
+.feedback__title::before{
+    position: absolute;
+    top:0;
+    left: 50%;
+    translate: -50% 0;
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    letter-spacing: 0%;
+    content: attr(content-before);
+    display: inline-block;
+    color: var(--color-gray);
+    transform: translateY(-50%);
+}
+
+.feedback__title::after{
+    position: absolute;
+    top:0;
+    left:43%;
+    content: "";
+    translate: -50% 100%;
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    letter-spacing: 0%;
+    width: 18px;
+    height: 2px;
+    display: inline-block;
+    background: var(--color-gray);
+    transform: translateY(-50%);
+}
+.feedback__desc{
+    width: 435px;
+    text-align: center;
+    margin: 0 auto;
+}
+.feedback-wrap{
+    padding: 70px;
+}
+.feedback__list{
+    width: 100%;
+    display: flex;
+    overflow: hidden;
+}
+.feedback-item{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 30px;
+    width: 100%;
+    flex-shrink: 0;
+    transform: translateX(-100%);
+}
+.feedback__item-wrap{
+   width: 100%;
+}
+.feedback-item__desc{
+    position: relative;
+    padding: 50px;
+    font-family: Open Sans;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 2.2rem;
+    line-height: 3.4rem;
+    letter-spacing: 0%;
+    text-align: center;
+    color: var(--color-gray);
+    background: #fff;
+    border: 1px solid #DFE2E8;
+    transition: 0.25s ease;
+    border-radius: 10px;
+}
+
+.feedback-item__desc::after{
+    position: absolute;
+    bottom: -12px;
+    left: 48%;
+    transform: translateX(-50%) translateY(-100);
+    content: "";
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    background: inherit;
+    rotate: -45deg;
+    transform: translateX(-50%);
+    border: 1px solid #DFE2E8;
+    border-width: 0 0 1px 1px; 
+}
+
+.feedback-item__desc:hover{
+    filter: drop-shadow(0 22px 54px  #00000012);
+    border: none;
+    border-color: transparent;
+    transform: translateY(-20px);
+}
+.feedback-item__desc:hover::after{
+    border-color: transparent;
+    
+}
+
+.feedback-thumbnail{
+    padding-top: calc(80px + 36px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+.feedback__avatar{
+    width: 104px;
+    height: 104px;
+    object-fit: cover;
+    border-radius: 50%;
+    background: #4AB5E3;
+}
+.avatar__name{
+    font-family: Open Sans;
+    font-weight: 600;
+    font-size: 26px;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+.avatar__introduc{
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 1.8rem;
+    line-height: 3rem;
+    letter-spacing: 0%;
+    text-align: center;
+    color: var(--color-gray);
+
+}
+.feedback__dots{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 83px;
+    gap: 10px;
+}
+.dot{
+    display: inline-block;
+    width: 22px;
+    height: 6px;
+    border: 1px solid #9B9FAB;
+    border-radius: 5px;
+}
+.active{
+    background: var(--primary-color);
+    border-color: transparent;
+}
+/* blog */
+.blog{
+    padding-bottom: 80px;
+}
+.blog__content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 70px;
+}
+.blog-wrap{
+    width: 435px;
+}
+.blog__title{
+    justify-self: flex-start;
+    padding: 0 0 18px;
+}
+.title__child{
+    position: relative;
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    letter-spacing: 0%;
+    color: var(--color-gray);
+    padding: 0 30px;
+}
+.title__child::before{
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    width: 18px;
+    height: 2px;
+    background: var(--color-gray);
+}
+.blog__list{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    gap: 30px;
+}
+.blog__card{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 22px;
+    cursor: pointer;
+    border: 1px solid #DFE2E8;
+    border-radius: 12px;
+    padding: 28px;
+}
+.blog__card:hover{
+    box-shadow: 0px 20px 50px 0px #00000012;
+    border: none;
+}
+.blog__img{
+    object-fit: cover;
+    width: 160px;
+    height: 160px;
+}
+.card__date{
+    padding: 10px 0;
+}
+.blog__card-title{
+    display: block;
+    width: 332px;
+    font-family: Open Sans;
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 3rem;
+    letter-spacing: 0%;
+    text-align: left;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Giới hạn số dòng là 2 */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 3rem;
+    padding: 20px 0;
+}
+.read__blog{
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: 0%;
+    color: var(--color-gray);    
+}
+/* application */
+.application{
+    padding: 80px 0;
+}
+.application-inner{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    background: #7264D6;
+    border-radius: 24px;
+    height: 466px;
+    color: #fff;
+}
+.application__text-child{
+    color: inherit;
+}
+.application__text-child::before{
+    color: inherit;
+    background: #fff;
+}
+.application__title{
+    font-family: Open Sans;
+    font-weight: 700;
+    font-size: 4rem;
+    line-height: 5rem;
+    letter-spacing: 0%;
+    text-align: center;    
+    text-align: center;
+    color: #fff;
+}
+.application__desc{
+    width: 435px;
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    text-align: center;
+    color: inherit;
+}
+.application-wrap{
+    padding: 26px;
+    width: 380px;
+    display: flex;
+    justify-content: center ;
+    gap: 20px;
+}
+.application-btn{
+    width: 182px;
+    background: #fff;
+}
+.app-container{
+    position: relative;
+}
+.app-star-1{
+    position: absolute;
+    top: 49px;
+    left: 112px;
+}
+.app-star-2{
+    position: absolute;
+    top: 49px;
+    right: 112px;
+}
+.app-star-3{
+    position: absolute;
+    bottom: 49px;
+    left: 166px;
+}
+.app-star-4{
+    position: absolute;
+    bottom: 49px;
+    right: 166px;
+}
+/* footer */
+.footer{
+    padding: 80px 0 0;
+}
+.footer__list{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    color: var(--color-gray);
+}
+.footer__list a{
+    color: var(--color-gray);
+    display: block;
+}
+.footer__img{
+    width: 102px;
+    height: 24px;
+}
+.footer-item:last-child{
+    grid-column: -3/-1;
+}
+.footer-item{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+.footer-item > .footer__link:first-child{
+    font-family: Open Sans;
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 3rem;
+    letter-spacing: 0%;    
+    color: #212832;
+}
+.footer-item > .footer__link:not(:first-child){
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    letter-spacing: 0%;    
+    color: var(--color-gray);
+}
+.footer-wrap{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 24px;
+    padding-bottom: 54px;
+}
+.footer-block{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 20px;
+    height: 52px;
+}
+.footer-label{
+    font-family: Open Sans;
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 3rem;
+    letter-spacing: 0%;
+    color: #0A142F;    
+}
+.footer-email{
+    width: 80%;
+    padding: 20px;
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    letter-spacing: 0%;
+    color: var(--color-gray); 
+    caret-color:var(--color-gray) ;  
+    border: 1px solid #8E919A;
+    border-radius: 6px;
+    outline: none;
+}
+.footer-email::placeholder{
+    color: var(--color-gray);
+}
+.footer-submit{
+    font-family: Open Sans;
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    letter-spacing: 0%;
+    text-align: center;
+    flex-shrink: 0;
+    width: 113px;
+    background: #7264D6;
+    color: #fff;
+    border-radius: 6px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+.email__under{
+    display: flex;
+    gap: 100px;
+    color: var(--color-gray);
+    padding: 28px 0;
+}
+.link__under{
+    text-decoration: underline;
+    color: inherit;
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 1.8rem;
+    line-height: 3rem;
+}
+.copyright{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #7264D6;
+    padding: 28px 0;
+}
+.copyright a{
+    color: #FFFFFF;
+    font-family: Open Sans;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    
+}
