--- a/static/style.css
+++ b/static/style.css
@@ -762,12 +762,11 @@ a{
     letter-spacing: 0%;
     text-align: left;
     display: -webkit-box;
-    -webkit-line-clamp: 2; /* Giới hạn số dòng là 2 */
+    -webkit-line-clamp: 2; 
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    line-height: 3rem;
-    padding: 20px 0;
+
 }
 .read__blog{
     font-family: Open Sans;
